@@ -23,6 +23,18 @@
 	</parent>
 	<artifactId>eppt-core</artifactId>
 	<name>EPPT Core</name>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>mil.army.usace.hec</groupId>
+				<artifactId>hec-monolith-bom</artifactId>
+				<version>${monolith.version}</version>
+				<type>pom</type>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>gov.ca.water</groupId>
@@ -40,50 +52,35 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
-			<groupId>com.rma.javafx</groupId>
-			<artifactId>rmaJavaFx</artifactId>
-			<version>v1.2.13</version>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>mil.army.usace.hec</groupId>
+			<artifactId>rma-javafx-core</artifactId>
+			<version>${rmajavafx.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>hecjavadev-core</groupId>
-			<artifactId>hec-core</artifactId>
-			<version>6.0</version>
-			<classifier>DeltaERT-1-4-0-97-Obfuscated</classifier>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>mil.army.usace.hec</groupId>
+			<artifactId>hec-monolith</artifactId>
+			<version>${monolith.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>hec.dataui</groupId>
-			<artifactId>hec-data-ui</artifactId>
-			<version>1.1</version>
-			<classifier>DeltaERT-1-4-0-97-Obfuscated</classifier>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.netbeans.api</groupId>
+			<artifactId>org-openide-util-lookup</artifactId>
+			<version>${netbeans.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>mil.army.usace.hec</groupId>
+			<artifactId>lookup-compat</artifactId>
+			<version>4.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.flogger</groupId>
 			<artifactId>flogger</artifactId>
-			<version>0.3.1</version>
+			<version>0.7.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.flogger</groupId>
 			<artifactId>flogger-system-backend</artifactId>
-			<version>0.3.1</version>
 			<scope>compile</scope>
+			<version>0.7.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
@@ -143,49 +140,25 @@
 			<version>V16_x64</version>
 		</dependency>
 		<dependency>
-			<groupId>rma.services.annotations</groupId>
-			<artifactId>service-annotations</artifactId>
-			<version>1.2</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>rma.util</groupId>
-			<artifactId>lookup</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20171018</version>
 		</dependency>
+
+		<!-- JavaFX -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-web</artifactId>
+			<version>${javafx.version}</version>
+		</dependency>
 	</dependencies>
-	<repositories>
-		<repository>
-			<id>rma-maven-library-releases</id>
-			<url>http://artifactory.rmanet.com:2447/artifactory/rma-maven-library-releases</url>
-		</repository>
-		<repository>
-			<id>rma-maven-library-snapshots</id>
-			<url>http://artifactory.rmanet.com:2447/artifactory/rma-maven-library-snapshots</url>
-		</repository>
-		<repository>
-			<id>third-party-maven-library-releases</id>
-			<url>http://artifactory.rmanet.com:2447/artifactory/third-party-maven-library-releases</url>
-		</repository>
-	</repositories>
 	<build>
 		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-surefire-plugin</artifactId>-->
-<!--&lt;!&ndash;				<version>2.19.1</version>&ndash;&gt;-->
-<!--				<configuration>-->
-<!--&lt;!&ndash;					<workingDirectory>${project.basedir}</workingDirectory>&ndash;&gt;-->
-<!--&lt;!&ndash;					<forkMode>once</forkMode>&ndash;&gt;-->
-<!--&lt;!&ndash;					<argLine>-Djava.library.path=${project.build.directory}/lib</argLine>&ndash;&gt;-->
-<!--&lt;!&ndash;					<argLine>-Djava.library.path=${project.build.directory}\lib</argLine>&ndash;&gt;-->
-<!--				</configuration>-->
-<!--			</plugin>-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -193,72 +166,82 @@
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.library.path=${project.build.directory}/lib</argLine>
+					<argLine>-Xmx1024m -Djava.library.path=${project.build.directory}/lib</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>3.1.2</version>
 				<executions>
+					<execution>
+						<id>download_javaHecLib</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>mil.army.usace.hec</groupId>
+									<artifactId>javaHeclib</artifactId>
+									<version>${javaheclib.version}</version>
+									<type>zip</type>
+									<outputDirectory>${project.build.directory}/lib</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
 					<execution>
 						<id>copy-dependencies</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>copy</goal>
 						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>dwr</groupId>
+									<artifactId>callite</artifactId>
+									<version>v16</version>
+									<type>dll</type>
+									<destFileName>CalLiteV16.dll</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>dwr</groupId>
+									<artifactId>callite-xa</artifactId>
+									<version>v16</version>
+									<type>lic</type>
+									<destFileName>CalLiteXAv16.lic</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>sunsetsoft</groupId>
+									<artifactId>xa</artifactId>
+									<version>v16</version>
+									<type>dll</type>
+									<destFileName>XAV16_x64.dll</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>dwr</groupId>
+									<artifactId>n2xa</artifactId>
+									<version>v3</version>
+									<type>dll</type>
+									<destFileName>n2xav3.dll</destFileName>
+								</artifactItem>
+								<artifactItem>
+									<groupId>dwr</groupId>
+									<artifactId>cb</artifactId>
+									<version>v16</version>
+									<type>dll</type>
+									<destFileName>cb.dll</destFileName>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<artifactItems>
-						<artifactItem>
-							<groupId>hec</groupId>
-							<artifactId>javaHeclib</artifactId>
-							<version>7-GS</version>
-							<type>dll</type>
-							<destFileName>javaHeclib.dll</destFileName>
-						</artifactItem>
-						<artifactItem>
-							<groupId>dwr</groupId>
-							<artifactId>callite</artifactId>
-							<version>v16</version>
-							<type>dll</type>
-							<destFileName>CalLiteV16.dll</destFileName>
-						</artifactItem>
-						<artifactItem>
-							<groupId>dwr</groupId>
-							<artifactId>callite-xa</artifactId>
-							<version>v16</version>
-							<type>lic</type>
-							<destFileName>CalLiteXAv16.lic</destFileName>
-						</artifactItem>
-						<artifactItem>
-							<groupId>sunsetsoft</groupId>
-							<artifactId>xa</artifactId>
-							<version>v16</version>
-							<classifier>x64</classifier>
-							<type>dll</type>
-							<destFileName>XAV16_x64.dll</destFileName>
-						</artifactItem>
-						<artifactItem>
-							<groupId>dwr</groupId>
-							<artifactId>n2xa</artifactId>
-							<version>v3</version>
-							<type>dll</type>
-							<destFileName>n2xav3.dll</destFileName>
-						</artifactItem>
-						<artifactItem>
-							<groupId>dwr</groupId>
-							<artifactId>cb</artifactId>
-							<version>v16</version>
-							<type>dll</type>
-							<destFileName>cb.dll</destFileName>
-						</artifactItem>
-					</artifactItems>
-					<outputDirectory>${project.build.directory}/lib</outputDirectory>
-					<overWriteReleases>true</overWriteReleases>
-					<overWriteSnapshots>true</overWriteSnapshots>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
